--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "ctb-h5",
+  "name": "{{name}}",
   "version": "0.1.0",
   "private": true,
+  "description": "{{description}}",
+  "author": "{{author}}",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
